@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 
-# $Id: carp.t,v 1.6 2002/06/13 23:27:14 david Exp $
+# $Id$
 
 use strict;
 use Test::More tests => 23;
@@ -10,11 +10,14 @@ our $msg = "Error retrieving version";
 # Set up an App::Info subclass to ruin.
 package App::Info::Category::FooApp;
 use App::Info;
+use File::Spec;
 use strict;
 use vars qw(@ISA);
 @ISA = qw(App::Info);
 
 sub version { shift->error($msg) }
+
+(my $fn = File::Spec->catfile('t', 'carp.t')) =~ s/\\/\\\\/g;
 
 package main;
 
@@ -26,15 +29,15 @@ ok( my $app = App::Info::Category::FooApp->new( on_error => 'confess'),
 eval { $app->version };
 ok( my $err = $@, "Get confess" );
 like( $err, qr/^Error retrieving version/, "Starts with confess message" );
-like( $err, qr/called at t\/carp\.t line/, "Confess has stack trace" );
+like( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Confess has stack trace" );
 
 # Now try croak.
 ok( $app = App::Info::Category::FooApp->new( on_error => 'croak'),
     "Set up for croak" );
 eval { $app->version };
 ok( $err = $@, "Get croak" );
-like( $err, qr/^Error retrieving version at.*carp\.t/, "Starts with croak message" );
-unlike( $err, qr/called at t\/carp\.t line/, "Croak has no stack trace" );
+like( $err, qr/^Error retrieving version at.*$fn/, "Starts with croak message" );
+unlike( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Croak has no stack trace" );
 
 # Now die.
 ok( $app = App::Info::Category::FooApp->new( on_error => 'die'),
@@ -42,7 +45,7 @@ ok( $app = App::Info::Category::FooApp->new( on_error => 'die'),
 eval { $app->version };
 ok( $err = $@, "Get die" );
 like( $err, qr/^Error retrieving version/, "Starts with die message" );
-unlike( $err, qr/called at t\/carp\.t line/, "Die has no stack trace" );
+unlike( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Die has no stack trace" );
 
 # Set up to capture warnings.
 $SIG{__WARN__} = sub { $err = shift };
@@ -52,21 +55,21 @@ ok( $app = App::Info::Category::FooApp->new( on_error => 'cluck'),
     "Set up for cluck" );
 $app->version;
 like( $err, qr/^Error retrieving version/, "Starts with cluck message" );
-like( $err, qr/called at t\/carp\.t line/, "Cluck as stack trace" );
+like( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Cluck as stack trace" );
 
 # Carp.
 ok( $app = App::Info::Category::FooApp->new( on_error => 'carp'),
     "Set up for carp" );
 $app->version;
 like( $err, qr/^Error retrieving version/, "Starts with carp message" );
-unlike( $err, qr/called at t\/carp\.t line/, "Carp has no stack trace" );
+unlike( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Carp has no stack trace" );
 
 # Warn.
 ok( $app = App::Info::Category::FooApp->new( on_error => 'warn'),
     "Set up for warn" );
 $app->version;
 like( $err, qr/^Error retrieving version/, "Starts with warn message" );
-unlike( $err, qr/called at t\/carp\.t line/, "Warn has no stack trace" );
+unlike( $err, qr/called (?:at\s+$fn|$fn\s+at)\s+line/, "Warn has no stack trace" );
 
 # Dissallow bogus error levels.
 eval { App::Info::Category::FooApp->new( on_error => 'bogus') };
