@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 
-# $Id: myapache.t,v 1.10 2003/12/11 20:47:22 david Exp $
+# $Id$
 
 use strict;
 use Test::More;
@@ -30,10 +30,10 @@ ok( $apache->installed, "Apache is installed" );
 is( $apache->name, "Apache", "Get name" );
 if ($apache->httpd_root eq '/usr') {
     # Apple-installed Apache
-    is( $apache->version, "1.3.28", "Test Version" );
+    is( $apache->version, "1.3.29", "Test Version" );
     is( $apache->major_version, '1', "Test major version" );
     is( $apache->minor_version, '3', "Test minor version" );
-    is( $apache->patch_version, '28', "Test patch version" );
+    is( $apache->patch_version, '29', "Test patch version" );
     is( $apache->httpd_root, "/usr", "Test httpd root" );
     ok( !$apache->mod_perl, "Test mod_perl" );
     is( $apache->conf_file, "/etc/httpd/httpd.conf", "Test conf file" );
