@@ -4,6 +4,7 @@ Revision history for Perl extension App::Info.
       - Added new path to list of paths to search for PostgreSQL. The new
         path, /usr/lib/postgresql/bin, is used by at least one Debian package.
         Submitted by Cinly Ooi.
+      - Added support for Apache on Windows. Patch from Ron Savage.
 
 0.25  Thu Dec 11 20:50:43 2003
       - Fixed parsing of version numbers for new releases of PostgreSQL,
